# OGame

c_and_cpp/: CMakeLists.txt
c_and_cpp/includes/: define.h  modules.h
c_and_cpp/src/: main.cpp
c_and_cpp/src/Modules/Math/: Point.h
rust/: Cargo.toml
rust/main/: Cargo.toml
rust/main/src/: main.rs
rust/ogame_rs/: Cargo.toml
rust/ogame_rs/src/: lib.rs
rust/ogame_rs/src/modules/: math.rs
rust/ogame_rs/src/views/: ui.rs
rust/ogame_rs/tests/: point_test.rs
